# GameOfLifeEngine

./: CMakeLists.txt  main.cpp
cli/: GameOfLifeCli.cpp  GameOfLifeCli.h
cli/commands/: BaseCommandHandler.h  ChangeGameCycleBehaviourCommandHandler.cpp  ChangeNeighbourhoodCommandHandler.cpp  CycleCommandHandler.cpp  PrintBoardCommandHandler.cpp  SetCommandHandler.cpp
engine/: GameOfLifeBuilder.h  GameOfLifeManager.cpp  GameOfLifeManager.h  typedefs.h
engine/cells/: BaseCell.h  BaseCellFactoryMethod.h  EmptyCell.cpp  EmptyCellFactoryMethod.cpp
engine/configurationRepository/: ConfigurationRepository.cpp  ConfigurationRepository.h
engine/gameCycleBehaviour/: BaseGameCycleBehaviour.h  DefaultGameCycleBehaviour.cpp
engine/neighbourhood/: BaseNeighbourhood.h  MooreNeighbourhood.cpp
engine/utils/: Point.h
myCustomImplementations/: DefaultGameOfLifeCell.cpp  DefaultGameOfLifeCellFactoryMethod.cpp  VonNeumannNeighbourhood.cpp
